fix image figure on mobile

--- a/assets/sass/base/_figure.sass
+++ b/assets/sass/base/_figure.sass
@@ -17,9 +17,6 @@ figure
         justify-content: space-between
 
     @include media-breakpoint-down(md)
-        picture
-            margin-left: - $gutter-mobile
-            margin-right: - $gutter-mobile
         figcaption
             flex-direction: column-reverse
         p + .credit
